@@ -1,3 +1,10 @@
+2008-02-14  Mark A. Hershberger  <mah@everybody.org>
+
+	* progmodes/flymake.el (flymake-allowed-file-name-masks): Add
+	support for .pm files and .php files.
+	(flymake-err-line-patterns): Add pattern for PHP errors.
+	(flymake-php-init): New function.  PHP support for flymake.
+
 2008-02-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/ange-ftp.el (ange-ftp-quote-string): Use
